# CandCppProjects

./: fenix.json
Cgtk4WIN/: Makefile  gdb-launch.json  tasks.json
gtkC/: CMakeList.txt  CMakeLists.txt  gdb-launch.json  main.c  properties.json
